--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = kubecfg
-description = Create the skeleton for a python package/project
-author = JoÃ£o Pinto
+description = Python library and cli utility to check k8s client configurations
+author = João Pinto
 author_email = lamego.pinto@gmail.com
 url = https://github.com/joaompinto/kubecfg
 license = MIT
