--- a/setup.cfg
+++ b/setup.cfg
@@ -15,4 +15,4 @@ setup_requires =
 
 [options.entry_points]
 console_scripts =
-    kubecfg = kubecfg.__main__:main
+    kubecfg = kubecfg.__main__:app_main
