--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = kubecfg
+name = kpet
 description = Python library and cli utility to check k8s client configurations
 author = João Pinto
 author_email = lamego.pinto@gmail.com
-url = https://github.com/joaompinto/kubecfg
+url = https://github.com/joaompinto/kpet
 license = MIT
 license_file = LICENSE
 
@@ -15,4 +15,4 @@ setup_requires =
 
 [options.entry_points]
 console_scripts =
-    kubecfg = kubecfg.__main__:app_main
+    kpet = kpet.__main__:app_main
