--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,40 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.1.0
+    rev: v4.3.0
     hooks:
     - id: end-of-file-fixer
-    - id: flake8
-    - id: mixed-line-ending
+    -   id: mixed-line-ending
+        args: ['--fix=lf']
+        description: Forces to replace line ending by the UNIX 'lf' character.
     - id: trailing-whitespace
+    - id: check-merge-conflict
+    - id: check-case-conflict
+    - id: check-json
+    - id: check-toml
+    - id: check-yaml
+    - id: check-ast
+    - id: debug-statements
+    - id: check-docstring-first
+
+-   repo: https://github.com/asottile/reorder_python_imports
+    rev: v3.1.0
+    hooks:
+        - id: reorder-python-imports
+
+-   repo: https://github.com/pre-commit/pygrep-hooks
+    rev: v1.9.0  # Use the ref you want to point at
+    hooks:
+    - id: python-check-mock-methods
+    - id: python-use-type-annotations
+    - id: python-check-blanket-type-ignore
+    - id: python-check-blanket-noqa
+
 -   repo: https://github.com/psf/black/
-    rev: 19.3b0
+    rev: '22.6.0'
     hooks:
     - id: black
+
+-   repo: https://github.com/pycqa/flake8
+    rev: '4.0.1'
+    hooks:
+    -   id: flake8
