--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,4 +3,4 @@
 requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
 
 [tool.setuptools_scm]
-write_to = "kubecfg/version.py"
+write_to = "kpet/version.py"
